# simai

./: .gitignore  .gitmodules  AGENTS.md  README.md  hatch_build.py  pyproject.toml
.github/workflows/: build.yml
scripts/: README.md  build_wheel.sh  patch_paths.sh  restore_paths.sh
src/simai/backends/: analytical.py  binary.py  m4.py  ns3.py
src/simai/cli/: app.py  bench.py  generate.py  install.py  simulate.py  workflow.py
src/simai/topology/: generator.py
src/simai/workflow/: bench.py  generator.py
tests/: run_bench.slurm
