[project]
name = "simai"
version = "0.5.0"
description = "Python wrapper for SimAI datacenter network simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15",
    "numpy>=1.26",
    "pandas>=2.0",
]

[project.optional-dependencies]
profiling = ["torch>=2.0"]
m4 = ["torch>=2.4,<2.7"]

[project.scripts]
simai = "simai.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/simai"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
